# TriangleDomain

./: CMakeLists.txt  InfoManager.h  Readme.md  TestService.cpp  TestService.h  TriangleService.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trianglevwindow.cpp  trianglevwindow.h  trianglevwindow.ui
Images/: Lena.jpf  gray.jpf
TriangleSection/: CMakeLists.txt
TriangleSection/Entity/: AreaCoordinateSamplingData.cpp  AreaCoordinateSamplingData.h  AreaCoordinateTriangle.cpp  AreaCoordinateTriangle.h  AreaPoint.cpp  AreaPoint.h  CMakeLists.txt  DescartesCoordinateSamplingData.cpp  DescartesCoordinateSamplingData.h  FittingInfo.cpp  FittingInfo.h  Matrix.h  Point.cpp  Point.h  SamplingData.cpp  SamplingData.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h
TriangleSection/Util/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  FittingUtil.cpp  FittingUtil.h  ReconstructionUtil.cpp  ReconstructionUtil.h  TriangleVFunc.cpp  TriangleVFunc.h  TriangulationUtil.cpp  TriangulationUtil.h
TriangleVSystem/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  ImageTriangleVUtil.cpp  ImageTriangleVUtil.h  PublicUtil.cpp  PublicUtil.h  TriangleVUtil.cpp  TriangleVUtil.h  流程.md
TriangleVSystem/Tree/: CalculateData.cpp  CalculateData.h  ImageQuadTree.cpp  ImageQuadTree.h  ImageQuadTreeNode.cpp  ImageQuadTreeNode.h
include/: AreaCoordinateSamplingData.h  AreaCoordinateTriangle.h  AreaPoint.h  FileUtil.h  FittingInfo.h  ImageQuadTree.h  ImageTriangleVUtil.h  Point.h  PublicUtil.h  ReconstructionUtil.h  SamplingData.h  Triangle.h  TriangleVUtil.h  TriangulationUtil.h
include/eigen-3.3.9/: CMakeLists.txt
include/eigen-3.3.9/bench/btl/data/: CMakeLists.txt
include/eigen-3.3.9/blas/: CMakeLists.txt
include/eigen-3.3.9/doc/: CMakeLists.txt
include/eigen-3.3.9/lapack/: CMakeLists.txt
